--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="pastel" >
+<html lang="en" data-theme="corporate" >
 
 <head>
     <meta charset="UTF-8" />
