Shubham :- profile page complete

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en" data-theme="light" >
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/App.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sr-Jr</title>
 </head>
 
 <body>
